# ghm

./: .gitignore  Cargo.toml  README.md  install.sh
crates/ghad-cli/: Cargo.toml
crates/ghad-cli/src/: cli.rs  main.rs  output.rs
crates/ghad-cli/src/commands/: auth.rs  daemon.rs  issue.rs  observe.rs  org.rs  pr.rs  project.rs  prompt.rs  repo.rs
crates/ghad-cli/tests/: cli_tests.rs
crates/ghad-core/: Cargo.toml
crates/ghad-core/src/: config.rs  error.rs  models.rs  store.rs
crates/ghad-core/src/daemon/: dispatcher.rs  launchd.rs  mod.rs  poller.rs  processor.rs
crates/ghad-core/src/github/: auth.rs  client.rs  issues.rs  orgs.rs  projects.rs  pulls.rs  repos.rs
crates/ghm-cli/: Cargo.toml
crates/ghm-cli/src/: cli.rs  main.rs  output.rs
crates/ghm-cli/src/commands/: auth.rs  daemon.rs  issue.rs  mod.rs  observe.rs  org.rs  pr.rs  project.rs  prompt.rs  repo.rs
crates/ghm-cli/tests/: cli_tests.rs
crates/ghm-core/: Cargo.toml
crates/ghm-core/src/: config.rs  error.rs  lib.rs  models.rs  store.rs
crates/ghm-core/src/daemon/: dispatcher.rs  launchd.rs  mod.rs  poller.rs  processor.rs
crates/ghm-core/src/github/: auth.rs  client.rs  issues.rs  mod.rs  orgs.rs  projects.rs  pulls.rs  repos.rs
