[workspace]
resolver = "2"
members = [
    "crates/ghad-core",
    "crates/ghad-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["corelmax"]
license = "MIT"
description = "Github Activity to Agents Dispatcher (GHAAD) - CLI tool and daemon for dispatching GitHub activity to agents"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
