[package]
name = "ghm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for Github Activity to Agents Dispatcher (GHAAD)"

[[bin]]
name = "ghad"
path = "src/main.rs"

[dependencies]
ghm-core = { path = "../ghm-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4", features = ["derive", "env", "wrap_help"] }
comfy-table = "7"
colored = "3"
dialoguer = "0.11"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
